test/ModuleInterface/lazy-typecheck-errors.code
// RUN: %empty-directory(%t)

// RUN: %target-language-emit-module-interface(%t/Test.codeinterface) -module-name Test %s -experimental-lazy-typecheck -verify

extension DoesNotExist { // expected-error {{cannot find type 'DoesNotExist' in scope}}
  public fn method() {}
}
